nova_tests/plan142/neg/neg_i32_3b.nv
// Plan 142 (D227 Rule 3) NEG — 3_000_000_000 exceeds i32.MAX → hard error.
// EXPECT_COMPILE_ERROR [E_LIT_OUT_OF_RANGE] 3000000000 > i32.MAX (2147483647)

module neg.neg_i32_3b

test "i32 = 3_000_000_000 is out of range" {
    ro a i32 = 3_000_000_000
    assert(a == 0)
}
